--- a/homework3/Cargo.toml
+++ b/homework3/Cargo.toml
@@ -15,6 +15,7 @@ glium = "0.31.0"
 opencv = "0.65"
 bitflags = "1.3"
 nalgebra = "0.31.0"
+obj-rs = "0.6"
 
 [dependencies.cv-convert]
 version = '0.19.0'
