--- a/homework7/Cargo.toml
+++ b/homework7/Cargo.toml
@@ -16,6 +16,7 @@ opencv = "0.65"
 bitflags = "1.3"
 nalgebra = "0.31.0"
 obj-rs = "0.6"
+rand = "0.8"
 
 [dependencies.cv-convert]
 version = '0.19.0'
